# EncodingExplorer

./: .gitignore  README.md  io.github.josephmawa.EncodingExplorer.json  meson.build  package.json
data/: io.github.josephmawa.EncodingExplorer.desktop.in  io.github.josephmawa.EncodingExplorer.gschema.xml  io.github.josephmawa.EncodingExplorer.metainfo.xml.in  io.github.josephmawa.EncodingExplorer.service.in  meson.build
data/icons/: meson.build
po/: EncodingExplorer.pot  LINGUAS  POTFILES.in  meson.build  tr.po
src/: about.js  app.js  main.js  meson.build  more-settings.js  pref.js  scrolled-win.js  source-view.js  src-view.js  util.js  win.js
src/float-16/: get-float-16.js  set-float-16.js
src/gres/: io.github.josephmawa.EncodingExplorer.data.gresource.xml  io.github.josephmawa.EncodingExplorer.src.gresource.xml
src/lib/: float-16.js
src/styles/: index.css
src/ui/: help.ui  more-settings.ui  pref.ui  scrolled-win.ui  shortcuts-dialog.ui  src-view.ui  win.ui
